TEST_PROGRAMS/VALID/05/distributive_type.go
/* "Distributive" type declarations. */

package main

type ()

type ( t1 int
	t2 float64
)

type ( 
	t3 rune
	t4 string
)

func main() {
	// Do nothing
}
