TEST_PROGRAMS/INVALID/05/distributive_type_with_closing_bracket_not_on_own_line.go
/* "Distributive" type declaration with closing bracket not on its own line. */

package main

type ( 
	t2 int
	t3 float64 ) // Error: Closing bracket must be on its own line.


func main() {
	// Do nothing
}
